[gd_scene load_steps=9 format=2]

[ext_resource path="res://images/player-BG_x3.png" type="Texture" id=1]
[ext_resource path="res://fonts/FlopDesignFONT.otf" type="DynamicFontData" id=2]
[ext_resource path="res://images/card-back_40.png" type="Texture" id=3]
[ext_resource path="res://scripts/PlayerBG.gd" type="Script" id=4]
[ext_resource path="res://Card.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/arial.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 10
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 11
font_data = ExtResource( 6 )

[node name="PlayerBG" type="Sprite"]
texture = ExtResource( 1 )
hframes = 3
script = ExtResource( 4 )

[node name="NameLabel" type="Label" parent="."]
margin_left = -40.0
margin_top = -50.0
margin_right = 40.0
margin_bottom = -35.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "player name"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HandLabel" type="Label" parent="."]
margin_left = -40.0
margin_top = 26.0
margin_right = 40.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "poker hand"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChipsLabel" type="Label" parent="."]
margin_left = -40.0
margin_top = 37.0
margin_right = 40.0
margin_bottom = 50.0
custom_colors/font_color = Color( 0, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "cihps"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FaceDownCard1" type="Sprite" parent="."]
position = Vector2( -20, -4 )
texture = ExtResource( 3 )

[node name="FaceDownCard2" type="Sprite" parent="."]
position = Vector2( 20, -4 )
texture = ExtResource( 3 )

[node name="Card1" parent="." instance=ExtResource( 5 )]
position = Vector2( -20, -4 )

[node name="Card2" parent="." instance=ExtResource( 5 )]
position = Vector2( 20, -4 )
